--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@angular/forms": "^20.0.0",
     "@angular/platform-browser": "^20.0.0",
     "@angular/router": "^20.0.0",
+    "apexcharts": "^5.3.3",
     "bootstrap": "^5.3.6",
     "bootstrap-icons": "^1.13.1",
+    "ng-apexcharts": "^2.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
